osgi-loglistener-slf4j introduced

--- a/components.html
+++ b/components.html
@@ -135,14 +135,25 @@
             </p>
           </div>
         </div>
-        <div class="col-md-6">
-          <h2>osgi-servicereference</h2>
-          <p>Helper classes to be able to reference an OSGi service with a proxy object and hold method calls until
-            a timeout if no service is available behind a proxy.</p>
-          <p>
-            <a class="btn btn-outline btn-default" href="https://github.com/everit-org/osgi-servicereference"
-              role="button" target="_blank">View details &raquo;</a>
-          </p>
+        <div class="row">
+          <div class="col-md-6">
+            <h2>osgi-servicereference</h2>
+            <p>Helper classes to be able to reference an OSGi service with a proxy object and hold method calls
+              until a timeout if no service is available behind a proxy.</p>
+            <p>
+              <a class="btn btn-outline btn-default" href="https://github.com/everit-org/osgi-servicereference"
+                role="button" target="_blank">View details &raquo;</a>
+            </p>
+          </div>
+          <div class="col-md-6">
+            <h2>osgi-loglistener-slf4j</h2>
+            <p>Slf4jLogListener forwards all the LogEntry‘s (logged by a LogService) to an SLF4J Logger that is
+              assigned to the bundle that created the LogEntry.</p>
+            <p>
+              <a class="btn btn-outline btn-default" href="https://github.com/everit-org/osgi-loglistener-slf4j"
+                role="button" target="_blank">View details &raquo;</a>
+            </p>
+          </div>
         </div>
       </div>
       <hr class="featurette-divider">
