authentication-cas component added

--- a/authentication.html
+++ b/authentication.html
@@ -125,6 +125,14 @@
               role="button" target="_blank">View details &raquo;</a>
           </p>
         </div>
+        <div class="col-md-6">
+          <h2>CAS Authentication</h2>
+          <p>CAS authentication Servlet Filter.</p>
+          <p>
+            <a class="btn btn-outline btn-default" href="https://github.com/everit-org/authentication-cas"
+              role="button" target="_blank">View details &raquo;</a>
+          </p>
+        </div>
       </div>
     </div>
   </div>
