--- a/components.html
+++ b/components.html
@@ -62,6 +62,7 @@
   <div class="container">
     <!-- Example row of columns -->
     <div class="col-md-10 col-sm-12 col-xs-12">
+
       <div class="row bs-docs-featurette" id="dev_tools">
         <h2 class="bs-docs-featurette-title">Development Tools</h2>
         <div class="row">
@@ -112,6 +113,7 @@
         </div>
       </div>
       <hr class="featurette-divider">
+
       <div class="row bs-docs-featurette" id="utilities">
         <h2 class="bs-docs-featurette-title">Utilities</h2>
         <div class="row">
@@ -157,6 +159,7 @@
         </div>
       </div>
       <hr class="featurette-divider">
+
       <div class="row bs-docs-featurette" id="persistence">
         <h2 class="bs-docs-featurette-title">Persistence</h2>
         <div class="row">
@@ -217,6 +220,7 @@
         </div>
       </div>
       <hr class="featurette-divider">
+
       <div class="row bs-docs-featurette" id="complex_solutions">
         <h2 class="bs-docs-featurette-title">Complex solutions</h2>
         <div class="row">
@@ -297,6 +301,7 @@
         </div>
       </div>
       <hr class="featurette-divider">
+
       <div class="row bs-docs-featurette" id="web">
         <h2 class="bs-docs-featurette-title">Web</h2>
         <div class="col-md-6">
@@ -326,6 +331,7 @@
         </div>
       </div>
       <hr class="featurette-divider">
+
       <div class="row bs-docs-featurette" id="jira">
         <h2 class="bs-docs-featurette-title">Jira</h2>
         <div class="col-md-6">
@@ -345,6 +351,39 @@
           </p>
         </div>
       </div>
+      <hr class="featurette-divider">
+
+      <div class="row bs-docs-featurette" id="download_info">
+        <h2 class="bs-docs-featurette-title">Download information</h2>
+        <div class="text-left">
+          <p>
+            The release versions of the components are available on the <i>Maven Central Repository</i>. The artifacts
+            are categorized by the following groupIds:
+          </p>
+          <ul>
+            <li><a href="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.everit.config%22">org.everit.config</a>:
+              Maven configurations and coding conventiaions.</li>
+            <li><a href="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.everit.osgi.bundles%22">org.everit.osgi.bundles</a>:
+              OSGi-ready versions of libraries that are commonly used during application development based on OSGi.</li>
+            <li><a href="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.everit.osgi.dev%22">org.everit.osgi.dev</a>:
+              Development tools and Maven plugins.</li>
+            <li><a href="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.everit.osgi.dev.dist%22">org.everit.osgi.dev.dist</a>:
+              Zipped distribution packages of execution environments. Mainly used by the <a
+              href="https://github.com/everit-org/eosgi-maven-plugin">eosgi-maven-plugin</a>.</li>
+            <li><a href="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.everit.osgi%22">org.everit.osgi</a>:
+              Solutions that help to develop, test and build fast and reliable applications in OSGi environment.</li>
+          </ul>
+          <p>
+            The JIRA plugins are available on the <i>Atlassian Marketplace</i>:
+          </p>
+          <ul>
+            <li><a href="https://marketplace.atlassian.com/plugins/org.everit.jira.timetracker.plugin">Timetracker</a></li>
+            <li><a href="https://marketplace.atlassian.com/plugins/org.everit.jira.worklog.query.plugin.core">RESTful
+                Worklog Query</a></li>
+          </ul>
+        </div>
+      </div>
+
     </div>
     <div class="col-md-2 col-sm-0 col-xs-0">
       <nav id="affix-nav">
@@ -356,6 +395,7 @@
           <li><a href="#complex_solutions">Complex solutions</a></li>
           <li><a href="#web ">Web</a></li>
           <li><a href="#jira">Jira</a></li>
+          <li><a href="#download_info">Download information</a></li>
         </ul>
       </nav>
     </div>
