--- a/components.html
+++ b/components.html
@@ -216,7 +216,7 @@
           </div>
           <div class="col-md-6">
             <h2>osgi-querydsl-templates</h2>
-            <p>OSGi Components that makes it possible to create SQLTemplates instances via configuration.</p>
+            <p>OSGi Components that make it possible to create SQLTemplates instances via configuration.</p>
             <p>
               <a class="btn btn-outline btn-default" href="https://github.com/everit-org/osgi-querydsl-templates"
                 role="button" target="_blank">View details &raquo;</a>
@@ -226,7 +226,7 @@
         <div class="row">
           <div class="col-md-6">
             <h2>osgi-querydsl-support</h2>
-            <p>Component that make it possible to access the database by implementing functional interfaces.</p>
+            <p>Component that makes it possible to access the database by implementing functional interfaces.</p>
             <p>
               <a class="btn btn-outline btn-default" href="https://github.com/everit-org/osgi-querydsl-support"
                 role="button" target="_blank">View details &raquo;</a>
@@ -234,7 +234,7 @@
           </div>
           <div class="col-md-6">
             <h2>osgi-querydsl-configuration</h2>
-            <p>Component that help registering Querydsl Configuration as OSGi service.</p>
+            <p>Component that helps registering Querydsl Configuration as OSGi service.</p>
             <p>
               <a class="btn btn-outline btn-default" href="https://github.com/everit-org/osgi-querydsl-configuration"
                 role="button" target="_blank">View details &raquo;</a>
@@ -394,7 +394,7 @@
         <div class="row">
           <div class="col-md-6">
             <h2>jira-timetracker-plugin</h2>
-            <p>A plugin that makes it easier to fill the timelogs in Jira</p>
+            <p>A plugin that makes it easier to log worktime in Jira.</p>
             <p>
               <a class="btn btn-outline btn-default" href="https://github.com/everit-org/jira-timetracker-plugin"
                 role="button" target="_blank">View details &raquo;</a>
@@ -416,14 +416,14 @@
         <h2 class="bs-docs-featurette-title">Download information</h2>
         <div class="text-left">
           <p>
-            The release versions of the components are available on the <i>Maven Central Repository</i>. The artifacts
+            The release versions of the components are available in the <i>Maven Central Repository</i>. The artifacts
             are categorized by the following groupIds:
           </p>
           <ul>
             <li><a href="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.everit.config%22">org.everit.config</a>:
-              Maven configurations and coding conventiaions.</li>
+              Maven configurations and coding conventions.</li>
             <li><a href="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.everit.osgi.bundles%22">org.everit.osgi.bundles</a>:
-              OSGi-ready versions of libraries that are commonly used during application development based on OSGi.</li>
+              Libraries that are commonly used during OSGi based application development.</li>
             <li><a href="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.everit.osgi.dev%22">org.everit.osgi.dev</a>:
               Development tools and Maven plugins.</li>
             <li><a href="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.everit.osgi.dev.dist%22">org.everit.osgi.dev.dist</a>:
