adding google meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="google-site-verification" content="EQd3-8wb7Cb11-ZyIYWTiDpJAiU5HbOZQKtYqVJPb4M" />
 <title>Everit OpenSource</title>
 <link rel="icon" type="image/ico" href="fonts/favicon.ico">
 <!-- Bootstrap core CSS -->
